cargo-features = ["codegen-backend"]

[package]
name = "first_bevy_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["wayland"] }
clap = { version = "4.5.36", features = ["derive"] }
serde = "1.0.219"


[features]
# Wayland display server support
# wayland = ["bevy_internal/wayland"]

[dev-dependencies]
avian2d = "0.3.1"
avian3d = "0.3.1"
rand = "0.9.1"
# bevy_replicon = "0.32.1"
# bevy_quinnet = "0.16.0"
# bevy_replicon_quinnet = "0.11.0"

[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
inrcemental = false
debug = false


[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
